Revert "update css"
This reverts commit 8920e7111c041fe48e7484c9ddb117096e81d518.

--- a/src/RPS/RPS.css
+++ b/src/RPS/RPS.css
@@ -81,6 +81,7 @@ h2 {
         margin: auto;
     }
     .choiceDiv {
+        border: 1px solid blue;
         height: 15vw;
         width: 15vw;
         margin:auto;
